--- a/index.html
+++ b/index.html
@@ -14,13 +14,27 @@
     <h1>TRIVIA</h1>
   </header>
 
-  
+  <div id="start-screen">
+    
+    <button type="button" id="start-button">Start</button>
+
+  </div>
+
+  <div class="quiz-screen">
+
+    <div id="show-timer"></div>
+
+    
+
+
+  </div>
 
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/js/bootstrap.min.js"></script>
-<script src="assets/javascript/app.js"
+<script src="assets/javascript/questionSet.js"></script>
+<script src="assets/javascript/app.js"></script>
 </body>
 </html>
