--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css">
+
 <link rel="stylesheet" href="assets/css/style.css">
 <title>TRIVIA</title>
 </head>
@@ -20,20 +20,25 @@
 
   </div>
 
-  <div class="quiz-screen">
-
+  <div id="quiz-container" style="display: none">
     <div id="show-timer"></div>
-
     
+    <div id="quiz-questions"></div>
 
+    <button type="button" id="finished-button">Finished</button>
 
+  </div>
+
+  <div id="results-container" style="display: none">
+    <h2>Results</h2>
+    <div id="correctAns"></div>
+    <div id="wrongAns"></div>
+  
   </div>
 
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="assets/javascript/questionSet.js"></script>
 <script src="assets/javascript/app.js"></script>
 </body>
