--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <h2>Results</h2>
     <div id="correctAns"></div>
     <div id="wrongAns"></div>
+    <div id="unanswered"></div>
+    
+    <button type="button" id="reset-button">Restart</button>
   
   </div>
 
