added timer functionality

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 <title>TRIVIA</title>
 </head>
 <body>
-  <header>
-    <h1>TRIVIA</h1>
-  </header>
-
+  <div class="container">
+    <header class="row justify-content-center">
+      <h1>MOVIE TRIVIA</h1>
+    </header>
+  </div>
+  
   <div id="start-screen">
     
     <button type="button" id="start-button">Start</button>
@@ -23,7 +25,7 @@
   <div id="quiz-container" style="display: none">
     <div id="show-timer"></div>
     
-    <div id="quiz-questions"></div>
+    <form id="quiz-questions"></form>
 
     <button type="button" id="finished-button">Finished</button>
 
