--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <header class="row justify-content-center">
       <h1>MOVIE TRIVIA</h1>
     </header>
-  </div>
   
-  <div id="start-screen">
+  
+  <div class="row justify-content-center" id="start-screen">
     
     <button type="button" id="start-button">Start</button>
 
@@ -39,6 +39,8 @@
     
     <button type="button" id="reset-button">Restart</button>
   
+  </div>
+
   </div>
 
 
