--- a/index.html
+++ b/index.html
@@ -6,19 +6,25 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/css/bootstrap.min.css">
 
+<link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Shadows+Into+Light" rel="stylesheet">
+
+
 <link rel="stylesheet" href="assets/css/style.css">
 <title>TRIVIA</title>
 </head>
 <body>
   <div class="container">
-    <header class="row justify-content-center">
+    <div class="row justify-content-center">
       <h1>MOVIE TRIVIA</h1>
-    </header>
+    </div>
   
   
-  <div class="row justify-content-center" id="start-screen">
+  <div id="start-screen">
+
+    <h4>Answer the movie-based trivia questions in 2 minutes</h4>
+    <h4>Click START to begin!</h4>
     
-    <button type="button" id="start-button">Start</button>
+    <button type="button" id="start-button">START</button>
 
   </div>
 
