--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
     <div id="start-screen">
 
-      <h4>Answer the movie-based trivia questions in 2 minutes</h4>
-      <h4>Click START to begin!</h4>
+      <h4>Can you answer all the trivia questions in 2 minutes?</h4>
+      <h4>Click START to try!</h4>
 
       <button type="button" id="start-button">START</button>
 
