--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 </head>
 
 <body>
+
+  <div class="white-bg">
   <div class="container">
     <div class="row justify-content-center">
       <h1>MOVIE TRIVIA</h1>
@@ -51,6 +53,7 @@
 
     </div>
 
+  </div>
   </div>
 
 
