edited timer to be fixed upon scroll

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     </div>
 
     <div id="quiz-container" style="display: none">
-     
+      <div id="timer-header">
         <div id="time-remaining">Time Remaining</div>
         <div id="show-timer"></div>
-     
+      </div>
       <form id="quiz-questions"></form>
 
       <button type="button" id="finished-button">Finished</button>
